beam-environment image from openjdk:11. Removed +UseCGroupMemoryLimitForHeap because UseContainerSupport is enabled by default in jdk 11. Excluded jsp-api dependency.